<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@color/black">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/song_image"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"
            android:contentDescription="@string/song_image" />
        <ProgressBar
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:id="@+id/loading_progress"
            android:visibility="gone"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/album_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_song_title"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/song_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sample_song_title"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="  |  Top: "
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/popularity"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_artist_name"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
